Added exceptions to handle out of range area codes for suppliers phones. Added exceptions to prevent from saving empty phones. Added messages that indicate to the user that a company or a supplier have been added

--- a/Suppliers/Suppliers.csproj
+++ b/Suppliers/Suppliers.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Entities\Document.cs" />
     <Compile Include="Entities\Enums\DocumentTypes.cs" />
     <Compile Include="Entities\Enums\FederativeUnits.cs" />
+    <Compile Include="Entities\Exceptions\AreaCodeException.cs" />
     <Compile Include="Entities\Exceptions\BlankFieldException.cs" />
     <Compile Include="Entities\Exceptions\NoPhoneException.cs" />
     <Compile Include="Entities\IndividualEntity.cs" />
